force-app/main/default/objects/Ticket__c/fields/Available_for_Countries__c.field-meta.xml
<CustomField>
    <fullName>Available_for_Countries__c</fullName>
    <label>Available for Countries</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_Region</valueSetName>
    </valueSet>
</CustomField>