force-app/main/default/objects/Ticket__c/fields/Available_for_Memberships__c.field-meta.xml
<CustomField>
    <fullName>Available_for_Memberships__c</fullName>
    <label>Available for Memberships</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Memberships</valueSetName>
    </valueSet>
</CustomField>