force-app/main/default/objects/Ticket__c/fields/Available_for_Personas__c.field-meta.xml
<CustomField>
    <fullName>Available_for_Personas__c</fullName>
    <description>If there are special persona values then ticket available for only for these special personas, country and membership is not considered, otherwise it works and simple ticket.</description>
    <inlineHelpText>If there are special persona values then ticket available for only for these special personas, country and membership is not considered, otherwise it works and simple ticket.</inlineHelpText>
    <label>Available for Personas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Press</fullName>
            </value>
            <value>
                <fullName>Grant_Winner</fullName>
                <label>Grant Winner</label>
            </value>
            <value>
                <fullName>Invited_Person</fullName>
                <label>Invited Person</label>
            </value>
            <value>
                <fullName>Speaker</fullName>
            </value>
            <value>
                <fullName>Persona 1</fullName>
                <isActive>false</isActive>
                <label>Persona 1</label>
            </value>
            <value>
                <fullName>Persona 2</fullName>
                <isActive>false</isActive>
                <label>Persona 2</label>
            </value>
            <value>
                <fullName>Persona 3</fullName>
                <isActive>false</isActive>
                <label>Persona 3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>