force-app/main/default/objects/Ticket__c/fields/Event_Country_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Event_Country_Ticket__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this ticket is available only for participants whose country of residence equal event venue country. 
If checked, ignores all membership, country and persona rules.</description>
    <inlineHelpText>If checked, this ticket is available only for participants whose country of residence equal event venue country. 
If checked, ignores all membership, country and persona rules.</inlineHelpText>
    <label>Eligible for country of congress</label>
    <type>Checkbox</type>
</CustomField>