force-app/main/default/objects/Ticket__c/fields/Is_Group_only__c.field-meta.xml
<CustomField>
    <fullName>Is_Group_only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Group only?</label>
    <type>Checkbox</type>
</CustomField>