force-app/main/default/objects/Ticket__c/fields/Is_IPR_only__c.field-meta.xml
<CustomField>
    <fullName>Is_IPR_only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is IPR only?</label>
    <type>Checkbox</type>
</CustomField>