force-app/main/default/objects/Ticket__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Available_for_Memberships__c</columns>
    <columns>Available_for_Countries__c</columns>
    <columns>Available_for_Personas__c</columns>
    <columns>Is_Group_only__c</columns>
    <columns>Is_IPR_only__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>